chapter_2/exer_2.1/answer
>>> 42 = n
  File "<stdin>", line 1
SyntaxError: can't assign to literal

>>> x = y = 1
>>> print(x,y)
1 1

>>> print("semicolumn");
semicolumn

>>> print("semicolumn").
  File "<stdin>", line 1
    print("semicolumn").
                       ^
SyntaxError: invalid syntax
>>> x = 2
>>> y = 3
>>> z = xy
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'xy' is not defined
>>> 

